@@ -1,3 +1,7 @@
+2011-05-23  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el: Set appt and diary.
+
 2011-05-20  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el: Fix highlight-symbol-face.
